--- a/PCquan.html
+++ b/PCquan.html
@@ -11,7 +11,7 @@
       <a href="https://28q05.com/pc/index.html"
         ><img
           style="width: 100%; height: auto"
-          src="img/01.jpg"
+          src="jpg/01.jpg"
           alt=""
           border="0"
       /></a>
@@ -19,21 +19,21 @@
       <a href="https://28q05.com/pc/index.html"
         ><img
           style="width: 100%; height: auto"
-          src="img/02.jpg"
+          src="jpg/02.jpg"
           alt=""
           border="0"
       /></a>
       <a href="https://28q05.com/pc/index.html"
         ><img
           style="width: 100%; height: auto"
-          src="img/03.jpg"
+          src="jpg/03.jpg"
           alt=""
           border="0"
       /></a>
       <a href="https://28q05.com/pc/index.html"
         ><img
           style="width: 100%; height: auto"
-          src="img/04.jpg"
+          src="jpg/04.jpg"
           alt=""
           border="0"
       /></a>
