--- a/PCquan.html
+++ b/PCquan.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <a href="https://28q05.com/pc/index.html"
+      <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
         ><img
           style="width: 100%; height: auto"
           src="jpg/01.jpg"
@@ -16,21 +16,21 @@
           border="0"
       /></a>
 
-      <a href="https://28q05.com/pc/index.html"
+      <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
         ><img
           style="width: 100%; height: auto"
           src="jpg/02.jpg"
           alt=""
           border="0"
       /></a>
-      <a href="https://28q05.com/pc/index.html"
+      <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
         ><img
           style="width: 100%; height: auto"
           src="jpg/03.jpg"
           alt=""
           border="0"
       /></a>
-      <a href="https://28q05.com/pc/index.html"
+      <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
         ><img
           style="width: 100%; height: auto"
           src="jpg/04.jpg"
@@ -44,7 +44,7 @@
       <h4>
         💥
         28圈在线综合娱乐新兴投注实力权威品牌，超低门槛，返点上不封顶，充提极速到账，大额无忧！💥
-      </h4>
+      </h2>
 
       <p>
         <b>🇨🇦彩票游戏：</b>
