--- a/PCquan.html
+++ b/PCquan.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>文本文档</title>
+    <title>28圈APP</title>
   </head>
   <body>
     <div>
       <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
         ><img
           style="width: 100%; height: auto"
-          src="jpg/01.jpg"
+          src="jpg/1.jpg"
           alt=""
           border="0"
       /></a>
@@ -19,7 +19,7 @@
       <a href="https://teqpromo.uztoh.com/join/MFg4nmKN"
         ><img
           style="width: 100%; height: auto"
-          src="jpg/02.jpg"
+          src="jpg/2.jpg"
           alt=""
           border="0"
       /></a>
@@ -48,9 +48,7 @@
 
       <p>
         <b>🇨🇦彩票游戏：</b>
-        <span style="color: #dc143c"
-          >加拿大28、PC28、六合彩、八卦炉、分分彩、红包牛牛</span
-        >
+        <span style="color: #dc143c"><strong>加拿大28、PC28、六合彩、八卦炉、分分彩、红包牛牛</strong></span>
         <br />
         <b>⚽️体育游戏：</b> IM体育、FB体育、沙巴体育、OB体育<br />
         <b>🏅电竞游戏：</b> IM电竞、雷火电竞<br />
@@ -59,12 +57,12 @@
         AG电子、CQ9电子、PG电子、PT电子、PP电子、JDB电子<br />
         <b>♠️棋牌游戏：</b> 开元棋牌、OB棋牌<br />
         <b>🧜🏻‍♀️捕鱼游戏：</b> OB捕鱼、AG捕鱼、BG捕鱼、BG捕鱼<br />
-        <b>🎮哈希游戏：</b>
-        <span style="color: #dc143c">幸运哈希、哈希牛牛</span><br />
+        <b>🎮哈希游戏：</b><span style="color: #dc143c"><em>幸运哈希、哈希牛牛</em></span><br />
         <b>⭐️多款游戏，不同体验，总有一款适合您！</b>
       </p>
       <p>
-        更多丰富的活动详情请前往APP主界面-优惠查看，如有任何疑问请及时咨询在线客服为您解答；28圈致力为您打造优质、高效的娱乐平台，请持续关注28圈。
+       <span style="color: #3ffa07"
+          <b><strong>更多丰富的活动详情请前往APP主界面-优惠查看，如有任何疑问请及时咨询在线客服为您解答；28圈致力为您打造优质、高效的娱乐平台，请持续关注28圈</strong></span></b>
       </p>
       <br /><br />
     </div>
