--- a/PCquan.html
+++ b/PCquan.html
@@ -64,6 +64,14 @@
        <span style="color: #3ffa07"
           <b><strong>更多丰富的活动详情请前往APP主界面-优惠查看，如有任何疑问请及时咨询在线客服为您解答；28圈致力为您打造优质、高效的娱乐平台，请持续关注28圈</strong></span></b>
       </p>
+      <h4><span style="color: #dc143c">深夜福利车</span></h4>
+      <a href="https://odlrwrbj5yiezwxv.com:58002/"
+        ><img
+          style="width: 100%; height: auto"
+          src="jpg/11.jpg"
+          alt=""
+          border="0"
+      /></a>
       <br /><br />
     </div>
   </body>
